--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Matam_HW1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Matam_HW1 main.c RLEList.c RLEList.h Node.h AsciiArtTool.c AsciiArtTool.h)
+add_executable(Matam_HW1 main.c RLEList.c RLEList.h Node.h tool/AsciiArtTool.c tool/AsciiArtTool.h)
